test/integration/bad/algebra_solver/stanc.expected
  $ ../../../../../install/default/bin/stanc bad_fun_type.stan
Semantic error in 'bad_fun_type.stan', line 31, column 10 to column 62:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (array[] real, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] int.
  $ ../../../../../install/default/bin/stanc bad_fun_type_control.stan
Semantic error in 'bad_fun_type_control.stan', line 31, column 10 to column 78:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (array[] real, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] int, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_newton_fun_type_control.stan
Semantic error in 'bad_newton_fun_type_control.stan', line 31, column 10 to column 85:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver_newton(algebra_system, y, theta_p, x_r, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver_newton'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (array[] real, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] int, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_newton_x_i_type.stan
Semantic error in 'bad_newton_x_i_type.stan', line 31, column 10 to column 69:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver_newton(algebra_system, y, theta_p, x_r, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver_newton'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] real.
  $ ../../../../../install/default/bin/stanc bad_newton_x_i_type_control.stan
Semantic error in 'bad_newton_x_i_type_control.stan', line 31, column 10 to column 85:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver_newton(algebra_system, y, theta_p, x_r, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver_newton'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] real, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_newton_x_r_type.stan
Semantic error in 'bad_newton_x_r_type.stan', line 31, column 10 to column 69:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver_newton(algebra_system, y, theta_p, x_r, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver_newton'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] int, array[] int.
  $ ../../../../../install/default/bin/stanc bad_newton_x_r_type_control.stan
Semantic error in 'bad_newton_x_r_type_control.stan', line 31, column 10 to column 85:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver_newton(algebra_system, y, theta_p, x_r, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver_newton'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] int, array[] int, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_newton_x_r_var_type.stan
Semantic error in 'bad_newton_x_r_var_type.stan', line 31, column 10 to column 71:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver_newton(algebra_system, y, theta_p, x_r_p, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver_newton'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] int.
  $ ../../../../../install/default/bin/stanc bad_newton_x_r_var_type_control.stan
Semantic error in 'bad_newton_x_r_var_type_control.stan', line 31, column 10 to column 87:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver_newton(algebra_system, y, theta_p, x_r_p, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver_newton'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] int, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_newton_y_type.stan
Semantic error in 'bad_newton_y_type.stan', line 31, column 10 to column 69:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver_newton(algebra_system, y, theta_p, x_r, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver_newton'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (array[] real, vector, array[] real, array[] int) => vector, real, vector, array[] real, array[] int.
  $ ../../../../../install/default/bin/stanc bad_newton_y_type_control.stan
Semantic error in 'bad_newton_y_type_control.stan', line 31, column 10 to column 85:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver_newton(algebra_system, y, theta_p, x_r, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver_newton'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (array[] real, vector, array[] real, array[] int) => vector, real, vector, array[] real, array[] int, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_theta_type.stan
Semantic error in 'bad_theta_type.stan', line 31, column 10 to column 62:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (array[] real, vector, array[] real, array[] int) => vector, vector, real, array[] real, array[] int.
  $ ../../../../../install/default/bin/stanc bad_theta_type_control.stan
Semantic error in 'bad_theta_type_control.stan', line 31, column 10 to column 78:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (array[] real, vector, array[] real, array[] int) => vector, vector, real, array[] real, array[] int, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_x_i_type.stan
Semantic error in 'bad_x_i_type.stan', line 31, column 10 to column 62:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] real.
  $ ../../../../../install/default/bin/stanc bad_x_i_type_control.stan
Semantic error in 'bad_x_i_type_control.stan', line 31, column 10 to column 78:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] real, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_x_r_type.stan
Semantic error in 'bad_x_r_type.stan', line 31, column 10 to column 62:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] int, array[] int.
  $ ../../../../../install/default/bin/stanc bad_x_r_type_control.stan
Semantic error in 'bad_x_r_type_control.stan', line 31, column 10 to column 78:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] int, array[] int, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_x_r_var_type.stan
Semantic error in 'bad_x_r_var_type.stan', line 31, column 10 to column 64:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r_p, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] int.
  $ ../../../../../install/default/bin/stanc bad_x_r_var_type_control.stan
Semantic error in 'bad_x_r_var_type_control.stan', line 31, column 10 to column 80:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r_p, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (vector, vector, array[] real, array[] int) => vector, vector, vector, array[] real, array[] int, real, real, int.
  $ ../../../../../install/default/bin/stanc bad_y_type.stan
Semantic error in 'bad_y_type.stan', line 31, column 10 to column 62:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (array[] real, vector, array[] real, array[] int) => vector, real, vector, array[] real, array[] int.
  $ ../../../../../install/default/bin/stanc bad_y_type_control.stan
Semantic error in 'bad_y_type_control.stan', line 31, column 10 to column 78:
   -------------------------------------------------
    29:  transformed parameters {
    30:    vector[2] y_s_p;
    31:    y_s_p = algebra_solver(algebra_system, y, theta_p, x_r, x_i, 0.01, 0.01, 10);
                   ^
    32:  }
    33:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'algebra_solver'. Available signatures: 
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int) => vector
((vector, vector, data array[] real, data array[] int) => vector, vector, vector, data array[] real, data array[] int, data real, data real, data real) => vector
Instead supplied arguments of incompatible type: (array[] real, vector, array[] real, array[] int) => vector, real, vector, array[] real, array[] int, real, real, int.
